criar models, formulários e salvar

--- a/website/templates/sobre.html
+++ b/website/templates/sobre.html
@@ -3,7 +3,12 @@
 {% block conteudo %}
 
 
-<h1>Sobre</h1>
+<h1>Listagem das Pessoas</h1>
+<ul>
+{% for pessoa in pessoas %}
+</ul>
+
+
 
 {% include 'shared/lista_compartilhada.html' %}
 
