--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,5 +2,26 @@
 {% block conteudo %}
 
 <h1>Ideias Malucas</h1>
+{{msg}}
+<form action="/" method="post">
+    {% csrf_token %}
+    <label>Nome</label>
+    <input type="text" name="nome">
+
+    <label>Sobrenome</label>
+    <input type="text"name="sobrenome">
+
+    <label>E-mail</label>
+    <input type="text"name="email">
+
+    <select name="genero">
+        <option value="F">Feminino</option>
+        <option value="M">Masculino</option>
+        <option value="O">Outros</option>
+    </select>
+    <input type="submit" value="Cadastrar">
+
+</form>
+
 
 {% endblock %}
